And another tiny change...

--- a/GuideToCalculus.tex
+++ b/GuideToCalculus.tex
@@ -162,7 +162,7 @@ We can now notice how the derivative always is the original function multiplied 
 \begin{align*}
 \frac{\textrm{d}(x^n)}{\textrm{d}x} & \ \equiv \ nx^{n-1} \ \textrm{ for any real } n.
 \end{align*}
-This pattern can be proved fairly easily for any positive integer \(n\) using the binomial theorem, and is left as an exercise to the reader. Unfortunately, actually proving this pattern (known as the ``power rule") for any real power \(n\) will only be possible later on in this book.
+This pattern can be proved fairly easily for any natural power \(n\) using the binomial theorem, and is left as an exercise to the reader. Unfortunately, actually proving this pattern (known as the ``power rule") for any real power \(n\) will only be possible later on in this book.
 \\ \\ This brings us to a close on the fundamental idea of the derivative and the differential. As with last section, I would highly recommend solving practice problems on the derivative power rule until you are completely familiar with these ideas, before moving on to our next topic.
 \end{document}
 
