--- a/GuideToCalculus.tex
+++ b/GuideToCalculus.tex
@@ -177,6 +177,6 @@ This pattern can be proved fairly easily for any natural power \(n\) using the b
 	\D{\, [k \times f(x)]}{x} & \equiv k \times \D{f}{x}
 \end{align*}
 for any number \(k\), and is also left as an exercise.
-\\ \\ This brings us to a close on the fundamental idea of the derivative and the differential. As with last section, I would highly recommend solving practice problems on the derivative power rule until you are completely familiar with these ideas, before moving on to our next topic.
+\\ \\ This brings us to a close on the fundamental idea of the derivative and the differential. As with last section, I would highly recommend solving practice problems on these derivative properties until you are completely familiar with them, before moving on to our next topic.
 \end{document}
 
