Started the Integration section. Made a latex command for derivatives

--- a/GuideToCalculus.tex
+++ b/GuideToCalculus.tex
@@ -11,6 +11,9 @@
 \maketitle
 
 \newpage
+\tableofcontents
+
+\newpage
 \section{Know your Limits}
 Imagine that you're watching a live game of basketball, on your TV. Your favourite team's been playing well, but there's only half a minute left, and they're just one point behind. Their lead player gets the ball, spotting a clear path to the opposition's net. He throws the ball towards it as you sit on the edge of your seat, staring intently at the TV screen. Halfway as the ball curves through the air, the connection stutters for a split second, but when it resumes the ball has fallen through the net, and your favourite team's cheering. 
 \\ \\
@@ -176,7 +179,15 @@ This pattern can be proved fairly easily for any natural power \(n\) using the b
 \begin{align*}
 	\D{\, [k \times f(x)]}{x} & \equiv k \times \D{f}{x}
 \end{align*}
-for any number \(k\), and is also left as an exercise.
+for any constant \(k\), and is also left as an exercise.
 \\ \\ This brings us to a close on the fundamental idea of the derivative and the differential. As with last section, I would highly recommend solving practice problems on these derivative properties until you are completely familiar with them, before moving on to our next topic.
+
+\newpage
+\section{The Integral: an integral part of Calculus}
+Previously, we established how to find the rate of change of any polynomial equation. But what if we were given the rate of change, and wanted to get back to the original? For instance, imagine that the police caught someone speeding, and from their analysis, they worked out their velocity, \(v\) at any point in time along their journey as
+\begin{align*}
+	v(t) &= 12 \, t.
+\end{align*} 
+Could they then work backwards to find an equation for the criminal's distance?
 \end{document}
 
