--- a/GuideToCalculus.tex
+++ b/GuideToCalculus.tex
@@ -1,14 +1,17 @@
-\documentclass[11pt]{article}
+\documentclass[11pt, leqno]{article}
 \usepackage[margin=0.5in]{geometry}
 \usepackage{amsfonts,amsmath,amssymb,amsthm}
 \usepackage{ragged2e}
+\usepackage{graphicx}
 \author{Nikolai Merritt}
 \title{Understanding Calculus for Beginners}
 \date{\vspace{-5ex}}
 \numberwithin{equation}{section}
+\graphicspath{{Images/}}
 
 \begin{document}
 \newcommand{\D}[2]{\frac{\text{d}#1}{\text{d}#2}}
+\newcommand{\asreq}{\textrm{, as required.}}
 \maketitle
 
 \newpage
@@ -52,38 +55,50 @@ However, we can still offer Jim an incredibly good estimate to how much the Tham
 \begin{align*}
 \text{rise in water level} = \frac{(12.0001 + 5) \ (12.0001 - 12)}{12.0001 - 12} = \frac{17.0001 \times 0.0001}{0.0001} = 17.0001 \, \text{mm.}
 \end{align*}
-\\ So we can safely say that, as the time passed gets closer and closer to 12 minutes, the Thames' water level has risen by 17 mm. In other words, the approaching value of the water level rise is 17, as \(t\) approaches 12. Mathematicians have named approaching values like these with the word ``limit", saying that the limit of the rise is 17, as \(t\) goes to 12.
-\\ Because the idea of finding a limit is such a useful tool, mathematicians have also invented their own notation for it. Instead of writing the previous sentence, they would write:
+\\ So we can safely say that, as the time passed gets closer and closer to 12 minutes, our answer gets closer and closer to 17 mm. In other words, the approaching value of our water level rise is 17, as \(t\) approaches 12.
+\\ For whatever reason, mathematicians use the word ``limiting" instead of ``approaching". They'd say that the \textbf{limiting value} -- or ``limit" for short -- of our answer is 17, as \(t\) gets closer to 12.
+\\ \\ Because the idea of finding a limit is such a useful tool, mathematicians have also invented their own notation for it. Instead of having to write out the previous sentence, they would write:
+\begin{flalign*}
+\lim_{t \to 12} \left( \text{rise in water level} \right) = 17 \\
+\intertext{or } \lim_{t \to 12} \frac{(t+5) \ (t - 12)}{t-12} = 17.
+\end{flalign*}
+\\ Now that we've got the jargon out the way, you may be wondering how we can be so sure our limit is 17 \textit{exactly}? What if our rise actually approaches, say, 16.9998, 17.0002, or 17 \( + \frac{2}{8653}\)? While our answer of ``some number pretty damn close to 17" should do just fine for this simple scenario, knowing if some function limits to, say, \(\pi\), with all its uses and shortcuts, instead of 3.1416, can be vital for more important situations. This is why most limits are solved algebraically, instead of plugging in numbers and watching what happens. This allows for far more precision and rigour.  
+\\ \\ Thankfully, just like how fundamentally simple the idea of a limit is, so are the ways in which it can be used. Unlike a concrete function like \(\sin(x)\), a limit is more like a concept, and so is a bit more malleable. When we're adding, subtracting, multiplying or dividing different functions, it doesn't matter whether we look at what they approach together, or considered individually; it makes no difference to our answer. Or, in mathematical terms...
+\begin{flalign*}
+\intertext{For any functions \(f(x)\) and \(g(x)\), and any number \(c\), }
+\lim_{x \to c} \left[ f(x) + g(x) \right] &= \lim_{x \to c} f(x) \ + \ \lim_{x \to c} g(x) \\ \\
+\lim_{x \to c} \left[ f(x) - g(x) \right] &= \lim_{x \to c} f(x) \ - \ \lim_{x \to c} g(x) \\ \\
+\lim_{x \to c} \left[ f(x) \times g(x) \right] &= \lim_{x \to c} f(x) \ \times \ \lim_{x \to c} g(x) \\ \\
+\lim_{x \to c} \, \frac{f(x)}{g(x)} &= \frac{\lim\limits_{x \to c} f(x)}{\lim\limits_{x \to c} g(x)}
+\end{flalign*}
+\\ With these four properties made clear, we can easily start to demonstrate how we could work out the limit for our water level equation algebraically:
 \begin{align*}
-\lim_{t \to 12} \left(\text{rise in water level}\right) = 17 \ \ \ \text{or,} \ \ \ \lim_{t \to 12} \frac{(t + 5) \ (t - 12)}{t - 12} = 17.
+\lim_{t \to 12} \frac{(t + 5) \ (t - 12)}{t - 12} &= \lim_{t \to 12} \left( \frac{t - 12}{t - 12} \ (t + 5) \right) \\ \\
+ &= \lim_{t \to 12} \left(\frac{t - 12}{t - 12}\right) \times \lim_{t \to 12} (t + 5).
 \end{align*}
-\\ Now that we've got the jargon out the way, you may be wondering how can we be so sure our limit is 17 \textit{exactly}? What if our rise actually approaches, say, 16.9998, 17.0002, or 17 \(\frac{2}{8653}\)? While our answer of ``some number pretty darn close to 17" should do just fine for this simple scenario, knowing if some function limits to, say, \(\pi\), with all its uses and shortcuts, instead of 3.1416, can be crucial for more important ones. This is why most limits are solved algebraically, instead of plugging in numbers and watching what happens. Which allows for far more precision and rigour.  
-\\ \\ Thankfully, just like how fundamentally simple the idea of a limit is, so are the ways in which it can be used. Unlike a concrete function like sin \(x\), a limit is more like a concept, and so is a bit more malleable. This allows us to fiddle around with functions we want to find a limit for, until they're easy enough to solve intuitively. For example, the limit of two functions added together is the same as the sum of the individual limits of those two functions. Or, more mathematically written,
-\begin{align*}
-\lim_{x \to c} \left[ \, f(x) + g(x) \, \right] \ &\equiv \ \lim_{x \to c} f(x) + \lim_{x \to c} g(x) \ \text{ for any value } c.
-\end{align*}
-\\ And that makes intuitive sense if you think about it: the combined value two functions approach is going to be the same whether you combine them at the start or at the end.
-\\ \\ Similarly, the limit of two functions multiplied together is the same as the product of their individual limits. Or, in mathematical notation,
-\begin{align*}
-\lim_{x \to c} \left[ \, f(x) \times g(x) \, \right] \ &\equiv \ \lim_{x \to c} f(x) \times \lim_{x \to c} g(x) \ \text{ for any value } c.
-\end{align*}
-\\ With these two properties made clear, we can easily start to demonstrate how we could work out the limit for our water level equation algebraically:
-\begin{align*}
-\lim_{t \to 12} \frac{(t + 5) \ (t - 12)}{t - 12} &= \lim_{t \to 12} \left[ \frac{t - 12}{t - 12} \ (t + 5) \right] \\ \\
- &= \lim_{t \to 12} \ \frac{t - 12}{t - 12} \times \lim_{t \to 12} (t + 5).
-\end{align*}
-\\ Note that we're taking the limit as \(t\) approaches 12. Similar to our estimation in the mystery connection loss in our basketball scenario, we see what happens as \(t\) gets closer and closer to 12, but stopping before it arrives there. So, cancelling both sides of the fraction won't be dividing by zero. This means:
+\\ Note that we're taking the limit as \(t\) approaches 12. Similar to our estimation in the mystery connection loss in our basketball scenario, we see what happens as \(t\) \textit{approaches} 12, not when \(t\) \textit{is} 12 So, cancelling both sides of the fraction won't be dividing by zero. This means:
 \begin{align*}
 \lim_{t \to 12} \frac{(t + 5) \ (t - 12)}{t - 12} &= \lim_{t \to 12} 1 \times \lim_{t \to 12} \left( t + 5 \right). \\
 \end{align*}
-It's common sense that the value of our first limit on the right hand side will be 1, no matter what value we make \(t\). And it's equally clear that, as \(t\) gets closer and closer to 12, \(t + 5\) will get closer and closer to 17. So we have:
+Great! Now we've reduced it to a simple common-sense question. Our first limit on the right hand side doesn't care what value \(t\) is. Whether \(t = \) 11.9, 15, or a million, it doesn't make a difference; no matter what, \(1 = 1\). And it's equally obvious that, if we make \(t\) get closer and closer to 12, \(t + 5\) will get closer and closer to 17. So we have:
 \begin{align*}
-\\
 \lim_{t \to 12} \frac{(t + 5) \ (t - 12)}{t - 12} &= 1 \times 17 \\
 &= 17.
 \end{align*}
-\\ So, now we can say with almost 100\% certainty that, despite the nasty division by zero, the increase in the water level at 12 minutes in is exactly 17. Of course, this is only a humble little demonstration of the power of limits, but hopefully you can imagine how limits can be used to find incredibly accurate estimates for otherwise unknowable values. In fact, limits form the bedrock of Calculus, another extremely powerful and versatile tool in mathematics. 
-\\ In the next section I will explain how the derivative is simply an application of a limit. However, it is highly recommended that you first familiarise yourself with limits as much as possible. As it is not the purpose of this book to provide practice questions, I advise that you look for limit problems online, and solve enough of them that you feel as comfortable with the idea of a limit as possible. 
+\\ So, now we can say with almost 100\% certainty that, despite the nasty division by zero, the increase in the water level at 12 minutes in is exactly 17. Of course, this is only a humble little demonstration of the power of limits, but hopefully you can imagine how limits can be used to find incredibly accurate estimates for otherwise unknowable answers. In fact, limits form the bedrock of Calculus, another extremely powerful and versatile tool in mathematics. 
+\\ \\ In the next section we will explore the most famous limit ever: the derivative. However, it's vital to be as comfortable with each topic as possible before moving on to the next one. This book goes through topics extremely fast, so it'll be easy to be swept off your feet otherwise. Completing the 8 questions overleaf should be enough. Worked solutions are at the back of the book.
+\newpage
+Prove the following propositions:
+\begin{flalign}
+	\lim_{x \to -2} \left(12x^2 + 5 \right) &= 53 \\ \nonumber \\
+	\lim_{x \to a} \frac{(x + 3) \ (x - a)}{x - a} &= a + 3 \\ \nonumber \\
+	\lim_{x \to -2} \left( 12 \, \frac{x^2 - 4}{x + 2} \right) &= -48 \\ \nonumber \\
+	\lim_{h \to 0} \frac{(6 + h)^2 - 36}{h} &= 12 \\ \nonumber \\
+	\lim_{h \to 0} \ \frac{x}{3-\sqrt{x+9}} &= -6 \\ \nonumber \\
+	\lim_{U \to 0} \frac{1- \sqrt{1-U^2}}{U} &= 0 \\ \nonumber \\
+	\lim_{\alpha \to 0} \frac{1- \sqrt{1-\alpha^3}}{\alpha^3} &= \frac{1}{2} \\ \nonumber \\
+	\lim_{\psi \to 0} \frac{\sqrt{a + \psi} - \sqrt{a}}{\psi} &= \frac{\sqrt{a}}{2a} 
+\end{flalign}
 
 \newpage
 \section{Deriving the Derivative}
@@ -185,6 +200,7 @@ for any constant \(k\), and is also left as an exercise.
 
 \newpage
 \section{The Integral: an integral part of Calculus}
+\subsection{Going backwards: the antiderivative}
 Previously, we established how to find the rate of change of any polynomial equation. But what if we were given the rate of change, and wanted to get back to the original? For instance, imagine that the police caught someone speeding, and from their analysis, they worked out their velocity, \(v\) at any point in time along their journey as
 \begin{align*}
 	v(t) &= 12 \, t.
@@ -226,7 +242,64 @@ Now that we've got that example sorted, it's trivial to realise a general method
 	\D{F}{x} &= \frac{k}{n+1} \ (n+1) \ x^{(n+1) \, -1} \\ \\
 	&= kx^{(n+1) \, -1} \\ \\
 	&= kx^n \\ \\
-	&= f(x) \ \text{ as required.}
+	&= f(x) \ \text{ as required.} \\
+\end{flalign*}
+This brings us to a close with the antiderivative. As with the other sections, taking a pause and solving polynomial antiderivative questions is highly reccomended before going further. Ideally you should only move on when you're at the stage where you can look at a polynomial expression and instantly say its derivative and antiderivative.
+\newpage
+\subsection{Finding areas: the Riemann sum}
+In mathematics, it's often useful to find the area of a given shape. Whether two- or three-dimensional, this can be done by drawing a diagram, splitting the shape up into a group of manageable sub-shapes, and sum the areas of those. But what if we weren't given any standard shape to work with? What if we we had to find the area under a function curve?\\ \\
+Let's say we had the following curve, \(y = f(x)\): \\
+\includegraphics[width=\textwidth]{AreaUnderCurve} \\
+How could we go about finding the red area, between the points \(a\) and \(b\)?
+
+\newpage
+\section{Solutions}
+\begin{flalign*}
+	\intertext{1.1}
+	\intertext{As \(x\) limits to \(-2\), \ \(12x^2 + 5\) \ limits to \ \(12 \, (-2)^2 + 5\). So we have}
+	 \lim_{x \to -2} (12x^2 + 5) &= 12 \, (-2)^2 + 5 \\
+	&= 53 \asreq	
+	%
+	\intertext{1.2}
+	\lim_{x \to a} \frac{(x + 3) \ (x - a)}{x - a} &= \lim_{x \to a} \frac{x-a}{x-a} \times \lim_{x \to a} (x + 3) \\ \\
+	&= \lim_{x \to a} (1) \times \lim_{x \to a} (x + 3) \\ \\
+	&= a + 3 \asreq
+	%
+	\intertext{1.3}
+	\lim_{x \to -2} \left(12 \, \frac{x^2 - 4}{x + 2} \right) &= 12 \lim_{x \to -2} \frac{(x+2) \, (x-2)}{x+2} \\ \\
+	&= 12 \lim_{x \to -2} (x-2) \\ \\
+	&= 12 \times -4 \ = \ -48 \asreq
+	%
+	\intertext{1.4}
+	\lim_{h \to 0} \frac{(6+h)^2-36}{h} &= \lim_{h \to 0} \frac{36 + 12h + h^2 - 36}{h} \\ \\
+	&= \lim_{h \to 0} (12 + h) \\ \\
+	&= 12 \asreq
+	%
+	\intertext{1.5}
+	\lim_{h \to 0} \ \frac{x}{3-\sqrt{x+9}} &= \lim_{h \to 0} \frac{x \ (3 + \sqrt{x+9})}{ (3- \sqrt{x+9}) \ (3 + \sqrt{x+9})} \\ \\
+	&= \lim_{h \to 0} \frac{x \ (3 + \sqrt{x + 9})}{9 - (x + 9)} \\ \\
+	&= \lim_{h \to 0} - \frac{x \ (3 + \sqrt{x + 9})}{x} \\ \\
+	&= \lim_{h \to 0} - (3 + \sqrt{x + 9}) \\ \\
+	&= -6 \asreq
+	%
+	\intertext{1.6}		
+	\lim_{U \to 0} \frac{1- \sqrt{1-U^2}}{U} &= \lim_{U \to 0} \frac{(1 - \sqrt{1-U^2}) \ (1 + \sqrt{1-U^2}}{U \ (1+\sqrt{1-U^2})} \\ \\
+	&= \lim_{U \to 0} \ \frac{1 - 1 + U^2)}{U \ (1 + \sqrt{1-U^2})} \\ \\
+	&= \lim_{U \to 0} \ \frac{U}{1+\sqrt{1-U^2}} \\ \\	
+	&= \frac{0}{2} = 0 \asreq
+	%
+	\intertext{1.7}
+	\intertext{Similarly to 1.6, }
+	\lim_{\alpha \to 0} \frac{1- \sqrt{1-\alpha^3}}{\alpha^3} &= \lim_{\alpha \to 0} \ \frac{1 - (1-\alpha^3)}{a^3 \ (1 + \sqrt{1 + \alpha^3})} \\ \\
+	&= \lim_{\alpha \to 0} \ \frac{1}{1 + \sqrt{1 + \alpha^3}} \\ \\
+	&= \frac{1}{2} \asreq
+	%
+	\intertext{1.8}
+	\lim_{\psi \to 0} \frac{\sqrt{a + \psi} - \sqrt{a}}{\psi} &= \lim_{\psi \to 0} \frac{(\sqrt{a + \psi} - \sqrt{a}) \ (\sqrt{a + \psi} + \sqrt{a})}{\psi \ (\sqrt{a + \psi} + \sqrt{a})} \\ \\
+	&= \lim_{\psi \to 0} \ \frac{a + \psi - a}{\psi \ (\sqrt{a + \psi} + \sqrt{a})} \\ \\
+	&= \lim_{\psi \to 0} \frac{1}{\sqrt{a + \psi} + \sqrt{a}} \\ \\
+	&= \frac{1}{2\sqrt{a}} \\ \\
+	&= \frac{\sqrt{a}}{2a} \asreq
 \end{flalign*}
 \end{document}
 
